# rcathon

./: Cargo.toml  LICENSE  README.md
Grammar/: cat.gram
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  repl.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: code.rs  compiler.rs  disassembler.rs  lib.rs  opcode.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  span.rs
crates/core/src/ast/: mod.rs  token.rs
crates/core/src/ast/lexer/: lexer.rs  stream.rs
crates/core/src/ast/parser/: mod.rs  nodes.rs  parser.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: builtins.rs  frame.rs  lib.rs  value.rs  vm.rs
src/: lib.rs  main.rs
src/ast/: interpreter.rs  mod.rs  token.rs
src/ast/lexer/: lexer.rs  mod.rs  stream.rs
src/ast/parser/: mod.rs  nodes.rs  parser.rs
src/diagnostics/: errors.rs  mod.rs
